# ArkForzaWidgets

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_en.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: main.rs  state.rs
src/platform/: mod.rs  windows.rs
src/telemetry/: mod.rs  packet.rs  receiver.rs
src/ui/: editor.rs  fonts.rs  g_bar.rs  gear.rs  input_text.rs  mod.rs  shift.rs  slip_indicator.rs  speed.rs  stats.rs  telemetry_debug.rs
